# gameocean

./: .gitignore  config.yml
assets/: test.txt
src/: App.cpp  App.h  CMakeLists.txt  Version.h  common.h  gameoceanConfig.cmake
src/client/: App.cpp  App.h
src/client/anim/: Animation.h  AnimationProperty.h  GuiAnimationProperty.h  ScreenSwitchAnimation.cpp  ScreenSwitchAnimation.h
src/client/game/render/: GameRenderer.h
src/client/gui/: DynamicGuiElement.cpp  DynamicGuiElement.h  GuiButtonElement.cpp  GuiButtonElement.h  GuiElement.cpp  GuiElement.h  GuiElementContainer.cpp  GuiElementContainer.h  GuiImageElement.cpp  GuiImageElement.h  GuiNinePathImageElement.cpp  GuiNinePathImageElement.h  GuiTextBoxElement.cpp  GuiTextBoxElement.h  Screen.cpp  Screen.h
src/client/input/: InputEvent.h  KeyboardHandler.cpp  KeyboardHandler.h  MouseHandler.cpp  TouchEvent.h  TouchHandler.cpp
src/client/render/: Color.h  Font.cpp  Font.h  RenderObject.cpp  RenderObject.h  RenderObjectBuilder.cpp  RenderObjectBuilder.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureCoords.h  TextureManager.cpp  TextureManager.h
src/client_linux/: LinuxApp.cpp  LinuxApp.h  Main.cpp
src/common/: GameInfo.h  Version.h  common.h
src/common/game/: Block.cpp  Block.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  ItemInstance.cpp  ItemInstance.h
src/common/game/item/: BlockGroup.cpp  BlockGroup.h  BlockVariant.cpp  BlockVariant.h  ItemInstance.cpp  ItemInstance.h  ItemJSONUtils.cpp  ItemJSONUtils.h  ItemRegister.cpp  ItemRegister.h  ItemVariant.cpp  ItemVariant.h
src/common/gameocean/: GameInfo.cpp  GameInfo.h  Version.h  common.h
src/common/gameocean/entity/: Entity.cpp  Entity.h  ItemEntity.cpp  ItemEntity.h  Projectile.h  Snowball.cpp  Snowball.h
src/common/gameocean/game/: Inventory.cpp
src/common/gameocean/inventory/: Inventory.cpp  Inventory.h  InventoryWithArmor.h
src/common/gameocean/item/: BlockGroup.cpp  BlockGroup.h  BlockVariant.cpp  BlockVariant.h  ItemDrop.h  ItemGroup.cpp  ItemGroup.h  ItemInstance.cpp  ItemInstance.h  ItemJSONUtils.cpp  ItemJSONUtils.h  ItemRegister.cpp  ItemRegister.h  ItemVariant.cpp  ItemVariant.h  JSONItemLoader.cpp  JSONItemLoader.h
src/common/gameocean/math/: AABB.h  Vector2D.h  Vector3D.h
src/common/gameocean/model/: DefaultModels.cpp  DefaultModels.h  DynamicModel.cpp  DynamicModel.h  Model.cpp  Model.h
src/common/gameocean/net/: Connection.cpp  Connection.h  ConnectionHandler.h  ConnectionReceiveThread.cpp  ConnectionReceiveThread.h  Datagram.h  Packet.cpp  Packet.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h
src/common/gameocean/plugin/: Plugin.cpp  Plugin.h  PluginInfo.h  PluginManager.cpp  PluginManager.h
src/common/gameocean/utils/: BinaryStream.cpp  BinaryStream.h  Cancellable.h  CompressedBinaryStream.cpp  CompressedBinaryStream.h  Config.cpp  Config.h  Logger.cpp  Logger.h  NibbleArray.h  Random.cpp  Random.h  ResourceManager.cpp  ResourceManager.h  SchedulerThread.cpp  SchedulerThread.h  StringUtils.cpp  StringUtils.h  Thread.cpp  Thread.h  Time.cpp  Time.h  UUID.h  Vector3D.h
src/common/gameocean/world/: BlockPos.h  Chunk.cpp  Chunk.h  ChunkPos.h  ChunkPtr.cpp  ChunkPtr.h  EntityPhysicsTickTask.cpp  EntityPhysicsTickTask.h  EntityUpdateTickTask.cpp  EntityUpdateTickTask.h  World.cpp  World.h  WorldBlock.h  WorldListener.h  WorldProvider.cpp  WorldProvider.h
src/common/net/: Connection.cpp  ConnectionHandler.h  Network.h
src/common/net/client/: ConnectedPacket.h  DisconnectedPacket.h
src/common/net/server/: ConnectPacket.h
src/common/utils/: BinaryStream.cpp  BinaryStream.h  Config.cpp  Config.h  Logger.cpp  Logger.h  ResourceManager.cpp  ResourceManager.h  StringUtils.h  Thread.cpp  Thread.h  Time.cpp  Vector3D.h  membuf.h
src/game/render/: GameRenderer.cpp
src/game/world/: World.h
src/gui/: DynamicGuiElement.cpp  DynamicGuiElement.h  GuiButtonElement.cpp  GuiButtonElement.h  GuiElement.cpp  GuiElement.h  GuiElementContainer.cpp  GuiElementContainer.h  GuiImageElement.cpp  GuiImageElement.h  GuiNinePathImageElement.cpp  GuiTextBoxElement.cpp  GuiTextBoxElement.h  Screen.h
src/input/: KeyboardHandler.cpp  KeyboardHandler.h  MouseEvent.h  MouseHandler.cpp  MouseHandler.h  TouchHandler.h
src/net/: Connection.h  Network.h  Packet.cpp  Socket.cpp  Socket.h
src/net/client/: ConnectedPacket.h
src/net/server/: ConnectPacket.h
src/render/: Color.h  Font.cpp  Font.h  RenderObject.cpp  RenderObject.h  RenderObjectBuilder.cpp  RenderObjectBuilder.h  Shader.cpp  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
src/server/: Entity.cpp  Entity.h  Player.cpp  Player.h  PlayerBlockDestroyThread.cpp  PlayerBlockDestroyThread.h  PlayerChunkQueueThread.cpp  PlayerChunkQueueThread.h  PlayerInventory.h  Server.cpp  Server.h  main.cpp
src/server/command/: Command.cpp  Command.h  CommandSender.h
src/server/command/default/: GiveCommand.h  HelpCommand.h  TeleportCommand.h  VersionCommand.h
src/server/gameocean/: Entity.cpp  Entity.h  EntityPhysicsTickTask.cpp  EntityPhysicsTickTask.h  Player.cpp  Player.h  PlayerBlockDestroyThread.cpp  PlayerBlockDestroyThread.h  PlayerChunkQueueThread.cpp  PlayerChunkQueueThread.h  PlayerInventory.cpp  PlayerInventory.h  Server.cpp  Server.h
src/server/gameocean/command/: Command.cpp  Command.h  CommandSender.h
src/server/protocol/: Protocol.cpp  Protocol.h
src/server/utils/: NBT.cpp  NBT.h
src/server/world/: Block.h  BlockPos.h  Chunk.cpp  Chunk.h  ChunkPos.h  World.cpp  World.h  WorldBlock.h  WorldProvider.cpp  WorldProvider.h
src/server_app/: main.cpp
src/utils/: BinaryStream.cpp  BinaryStream.h  Logger.cpp  Logger.h  Time.cpp  Time.h
(+251 files in other folders)
